--- a/PaginaCitas/templates/PaginaCitas/Home.html
+++ b/PaginaCitas/templates/PaginaCitas/Home.html
@@ -6,7 +6,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand me-auto" href="#"><img src="{% static 'PaginaCitas/images/Logo-bot.png' %}" alt="Citas bot"></a>
+            <a class="navbar-brand me-auto" href="#"><img src="" alt="Citas bot"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
