--- a/PaginaCitas/templates/PaginaCitas/Register.html
+++ b/PaginaCitas/templates/PaginaCitas/Register.html
@@ -59,5 +59,6 @@
          </div>
          <button type="submit" class="login__button">Crear</button>
      </form>     
+      <p class="login__register">¿No tienes cuenta? <a href="/login/" bis_skin_checked="1">Inicia sesión</a></p>
    </div>
 {% endblock %}
